fixed overflow

--- a/styles/businessUser/main.css
+++ b/styles/businessUser/main.css
@@ -9,6 +9,7 @@ body {
   margin: 0px 0 10px;
   width: 100%;
   height: 100%;
+  overflow-y: hidden;
   
 
 }
