--- a/styles/customerstyles.css
+++ b/styles/customerstyles.css
@@ -13,6 +13,8 @@ body {
   flex-direction: column;
   height: 100vh;
   margin: -20px 0 50px;
+  overflow-y: hidden;
+
 }
 
 
@@ -20,6 +22,7 @@ body {
   position: relative;
   max-width: 500px;
   width: 100%;
+  top: 20px;
   background: #ffffff;
   padding: 50px;
   border-radius: 6px;
