--- a/styles/helpcenter/main.css
+++ b/styles/helpcenter/main.css
@@ -9,8 +9,9 @@ html{
 body{
     font-family: "Montserrat", sans-serif;
     background: linear-gradient(180deg, #EFF2F7 43%, #FFFFFF 43%);
-    height: 120vh;
+
     overflow-x: hidden;
+    overflow-y: hidden  ;
     
     
     
@@ -92,7 +93,7 @@ border: none;
 position: absolute;
 width: 350px;
 height: 369px;
-left: 150px;
+left: 300px;
 top: 330px;
 
 background: #FFFFFF;
@@ -140,7 +141,7 @@ border-radius: 12px;
     position: absolute;
     width: 350px;
     height: 369px;
-    left: 600px;
+    left: 750px;
     top: 330px;
     
     background: #FFFFFF;
@@ -171,7 +172,7 @@ border-radius: 12px;
     position: absolute;
     width: 350px;
     height: 369px;
-    left: 1050px;
+    left: 1200px;
     top: 330px;
     
     background: #FFFFFF;
