--- a/styles/loginstyles.css
+++ b/styles/loginstyles.css
@@ -13,6 +13,7 @@ body {
   font-family: "Montserrat", sans-serif;
   height: 100vh;
   margin: -20px 0 50px;
+  overflow-y: hidden;
 }
 
 h1 {
